--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <h2 id="appendix-links">Appendix Links</h2>
 <p><a href="./code.md">Code</a></p>
-<p><a href="./schematics.md">Schematics</a></p>
+<p><a href="./schematics.html">Schematics</a></p>
 <p><a href="./tasks.md">Tasks</a></p>
 <p><a href="./references.md">References</a></p>
 <p><a href="./appendixA.md">Appendix A</a></p>
